test/Fail/Issue1077.err
Issue1077.agda:6,1-10: error: [GenericError]
Illegal declaration(s) before top-level module
